force-app/main/default/objects/APXTConga4__Conga_Solution_Parameter__c/APXTConga4__Conga_Solution_Parameter__c.object-meta.xml
<CustomObject>
    <label>Conga Solution Parameter</label>
    <nameField>
        <displayFormat>CSP-{000000}</displayFormat>
        <label>Conga Solution Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Solution Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>