force-app/main/default/objects/APXTConga4__Conga_Solution_Parameter__c/fields/APXTConga4__Name__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Name__c</fullName>
    <label>Name</label>
    <type>TextArea</type>
</CustomField>