force-app/main/default/objects/APXTConga4__Conga_Solution_Parameter__c/fields/APXTConga4__Value__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Value__c</fullName>
    <label>Value</label>
    <type>TextArea</type>
</CustomField>